# smartsessions

./: .gas-snapshot  .gitignore  .gitmodules  .solhint.json  .solhintignore  Cargo.toml  Deploy.toml  README.md  build-all.sh  build-artifacts.sh  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt
.github/workflows/: build.yml
.husky/: pre-commit
SmartSession/: SmartSession.json  verify.json
artifacts/ArgPolicy/: ArgPolicy.json  verify.json
artifacts/ContractWhitelistPolicy/: ContractWhitelistPolicy.json  verify.json
artifacts/ERC20SpendingLimitPolicy/: ERC20SpendingLimitPolicy.json  verify.json
artifacts/SimpleGasPolicy/: SimpleGasPolicy.json  verify.json
artifacts/SmartSession/: SmartSession.json  (+1 more)
cache_forge/: solidity-files-cache.json
contracts/: DataTypes.sol  ISmartSession.sol  PermissionManagerBase.sol  PermissionManagerV2.sol  SmartSession.sol  SmartSessionBase.sol  SmartSessionCompatibilityFallback.sol  SmartSessionERC7739.sol  TrustedForwarders.sol  ValidatorTemplate.sol
rust/: main.rs  mock.rs  types.rs
script/: Deploy.md  Deploy.s.sol  DeployMulti.s.sol  DeployScript.s.sol
test/: ArrayMap4337Lib.t.sol  ArrayMap4337Lib.t.sol.bak  Base.t.sol  MultiKeySignerTest.t.sol  MultiKeySignerTest.t.sol.bak  PermissionV2.t.sol  PermissionV2.t.sol.bak  SigEncode.t.sol  SmartSession.t.sol  SmartSession.t.sol.bak  SmartSessionBase.t.sol  SmartSessionBase.t.sol.bak  UniActionPolicy.t.sol  UniActionPolicy.t.sol.bak  WalletConnect.t.sol
wc-cosigner/: Base64.sol  MultiKeySigner.sol  P256Verifier.sol  WCSigner.sol  WebAuthn.sol  passkey.sol
(+181 files in other folders)
