[package]
name = "smartsession-eip712"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smartsession-eip712"
path = "rust/main.rs"

[dependencies]
alloy = { version = "0.3.0", features = [
    "full",
    "node-bindings"
] }

# async
futures-util = "0.3"
tokio = {version = "1.38", features = ["macros", "rt-multi-thread"] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
clap = "2.33.3"
hex = "0.4.3"
